--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "API.AI Shipping Costs Webhook",
-  "description": "API.AI Shipping Costs Webhook Sapmple",
-  "repository": "https://github.com/svet4/shipping-costs-sample",
+  "name": "API.AI Test Tennis",
+  "description": "API.AI Test Tennis Sapmple",
+  "repository": "https://github.com/Florian-Lemenicier/testTennis",
   "logo": "http://xvir.github.io/img/apiai.png",
   "keywords": ["api.ai", "natural language"]
 }
